[package]
name = "prometheus-command-exporter"
version = "0.1.0"
edition = "2018"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
description = "Prometheus Command Exporter is a simple program to export the result of commands as Prometheus metrics, e.g. IPMI data with ipmitool"

[dependencies]
clap = "2.33.3"
actix-web = "3.3.2"
actix-cors = "0.5.4"
prometheus = "0.13.0"
log = "0.4.14"
env_logger = "0.9.0"
anyhow = "1.0.44"
serde_yaml = "0.8.21"
thiserror = "1.0.30"
libc = "0.2.103"
const_format = "0.2.21"

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[profile.release]
lto = true
panic = "abort"